--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.22.0",
     "ms": "^2.1.3",
     "msw": "^0.35.0",
     "react": "^16.14.0",
